Remove redundant text from the slide description

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             <h1 class="title-gold">ICE BREAKING<br>FISCOM 1447 H</h1>
             <div class="subtitle">TEBAK LAGU! 🎶</div>
             <p style="color: var(--text-muted); margin-top: 30px; font-style: italic;">
-                Perhatikan layarmu, dengarkan cluenya, dan bersiaplah!
+                bersiaplah!
             </p>
         </div>
 
