--- a/index.html
+++ b/index.html
@@ -272,14 +272,14 @@
             <h1 class="title-gold">ICE BREAKING<br>FISCOM 1447 H</h1>
             <div class="subtitle">TEBAK LAGU! 🎶</div>
             <p style="color: var(--text-muted); margin-top: 30px; font-style: italic;">
-                Perhatikan layarmu, dengarkan cluenya, dan bersiaplah!
+                Perhatikan simbolnya, pikirkan cluenya, dan bersiaplah!
             </p>
         </div>
 
         <div class="slide">
             <div class="level-badge">Lagu 1 • Level 1</div>
             <h2 style="font-size: 2rem; color: var(--text-muted);">Tebak dari Emoji Ini!</h2>
-            <div class="emoji-clue">🌙 🏃‍♂️ 💨</div>
+            <div class="emoji-clue">🌙 + ❌ + 🍽️</div>
         </div>
         <div class="slide">
             <div class="level-badge">Lagu 1 • Level 2</div>
@@ -297,7 +297,7 @@
         <div class="slide">
             <div class="level-badge">Lagu 2 • Level 1</div>
             <h2 style="font-size: 2rem; color: var(--text-muted);">Pecahkan Kode Ini!</h2>
-            <div class="emoji-clue" style="font-family: 'Inter';">Y + 💊 + 🌊</div>
+            <div class="emoji-clue" style="font-family: 'Inter';">Y + T💊 + H </div>
         </div>
         <div class="slide">
             <div class="level-badge">Lagu 2 • Level 2</div>
@@ -315,7 +315,7 @@
         <div class="slide">
             <div class="level-badge">Lagu 3 • Level 1</div>
             <h2 style="font-size: 2rem; color: var(--text-muted);">Apa makna gabungan ini?</h2>
-            <div class="emoji-clue">🌧️ 🌍</div>
+            <div class="emoji-clue">🌧️ + 🤲🏻</div>
         </div>
         <div class="slide">
             <div class="level-badge">Lagu 3 • Level 2</div>
@@ -332,8 +332,8 @@
 
         <div class="slide">
             <div class="level-badge">Lagu 4 • Level 1</div>
-            <h2 style="font-size: 2rem; color: var(--text-muted);">Baca perlahan emojinya...</h2>
-            <div class="emoji-clue">🛣️ 💓</div>
+            <h2 style="font-size: 2rem; color: var(--text-muted);">Perhatikan emojinya...</h2>
+            <div class="emoji-clue">📏 + 🌱</div>
         </div>
         <div class="slide">
             <div class="level-badge">Lagu 4 • Level 2</div>
